fixed overflow hamburger menu

--- a/Portfolio-abdes/src/App.css
+++ b/Portfolio-abdes/src/App.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+html ,body {
+  overflow: hidden;
+}
 
 body {
   margin: 0;
@@ -135,11 +138,16 @@ body {
   overflow: hidden;
   max-width: 100%;
   cursor: pointer;
-  display: none;
 }
 
-ul { list-style: none; }
-a { text-decoration: none; color: black;}
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
 
 #menu-wrapper #hamburger-menu {
   position: relative;
@@ -165,19 +173,24 @@ a { text-decoration: none; color: black;}
 #menu-wrapper #hamburger-menu span:nth-child(1) {
   top: 0;
 }
+
 #menu-wrapper #hamburger-menu span:nth-child(2) {
   top: 9px;
 }
+
 #menu-wrapper #hamburger-menu span:nth-child(3) {
   top: 18px;
 }
+
 #menu-wrapper #hamburger-menu.open span:nth-child(1) {
   transform: translateY(9px) rotate(135deg);
 }
+
 #menu-wrapper #hamburger-menu.open span:nth-child(2) {
   opacity: 0;
   transform: translateX(-60px);
 }
+
 #menu-wrapper #hamburger-menu.open span:nth-child(3) {
   transform: translateY(-9px) rotate(-135deg);
 }
@@ -186,6 +199,7 @@ a { text-decoration: none; color: black;}
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
 #menu-container .menu-list {
   padding-left: 0;
   display: block;
@@ -193,38 +207,44 @@ a { text-decoration: none; color: black;}
   width: 100%;
   max-width: 450px;
   background: white;
-  box-shadow: rgba(100,100,100,0.2) 6px 2px 10px;
+  box-shadow: rgba(100, 100, 100, 0.2) 6px 2px 10px;
   z-index: 999;
   overflow-y: auto;
   overflow-x: hidden;
+  transition: right 0.4s ease;
+
 }
 
-#menu-container .menu-list li.accordion-toggle, #menu-container .menu-list .menu-login {
+
+#menu-container .menu-list li.accordion-toggle,
+#menu-container .menu-list .menu-login {
   font-size: 16px;
   padding: 20px;
   text-transform: uppercase;
   border-top: 1px solid #dbdcd2;
 }
+
 #menu-container .menu-list li:first-of-type {
   border-top: 0;
 }
-#menu-container .menu-list {
-  transition: right 0.4s ease; 
-}
+
 
 @media (max-width: 1300px) {
-.navList {
-  display: none;
+  .navList {
+    display: none;
+
+  }
+
+  #menu-wrapper {
+    display: flex;
+  }
+
+  .navbar {
+    justify-content: space-between;
+  }
 
 }
-#menu-wrapper {
-  display: flex;
-}
-.navbar {
-  justify-content: space-between;
-}
 
-}
 /*  end hamburger menu*/
 
 .mySkills {
@@ -380,7 +400,7 @@ button:hover {
 
 }
 
-.card .image-container  {
+.card .image-container {
   width: 100%;
   height: 100%;
 
@@ -390,6 +410,7 @@ button:hover {
   filter: blur(5px);
   cursor: pointer;
 }
+
 .card .descriptionText {
   position: absolute;
   top: 50%;
@@ -399,12 +420,12 @@ button:hover {
   color: white;
   font-size: 1.5em;
   opacity: 0;
-  transition: opacity 0.5s ease; 
+  transition: opacity 0.5s ease;
   font-size: 20px;
 
 }
 
-.card .image-container:hover  .descriptionText {
-  opacity: 1; 
+.card .image-container:hover .descriptionText {
+  opacity: 1;
   cursor: pointer;
 }
